commit berfore merge

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@
 body {
   margin: 10px 20px;
   font-family: RobotoLight; /* Имя шрифта */
-  font-size: 20px;  
+  font-size: 20px; 
+  line-height: 1.5; 
 }
 
 a {
@@ -35,6 +36,15 @@ li {
   list-style-type: none; 
 }
 
+.btn-container {
+  display: flex; 
+  justify-content: center;
+}
+
+.btn-container a :hover {
+  color: #000;
+  opacity: 0.3;
+}
 
 .title-project {
   margin-bottom: 10px;
@@ -46,17 +56,7 @@ li {
 .flex-conteiner {
   display: flex;
   flex-wrap: wrap;
-}
-
-
-.btn-container {
-  display: flex; 
-  justify-content: center;
-}
-
-.btn-container a :hover {
-  color: #000;
-  opacity: 0.3;
+  width: 100%;
 }
 
 .btn {
@@ -97,7 +97,6 @@ li {
   font-size: 2.0rem;
 }
 
-
 .flex-border {
   border: 1px solid #ccc;
   border-radius: 30px;
@@ -113,7 +112,7 @@ li {
 .flex-item2 {
   display: flex;
   margin: 10px;
-  flex: 2 0 auto;
+  flex: 1 0 auto;
 }
 
 .fio-wrapper {
@@ -123,7 +122,7 @@ li {
 
 .photo img{
   display: flex;
-  max-width: 179px;
+  max-width: 220px;
 }
 
 .name-wrapper {
@@ -149,12 +148,12 @@ li {
 .social-item {
   display: flex;
   margin: 5px;
-  justify-content: center;
-  align-content: center;
-  font-size: 40px;
-  font-family: RobotoLight;
   width: 48px;
   height: 48px;
+  justify-content: center;
+  font-size: 40px;
+  font-family: RobotoLight;
+  line-height: 1.30;
   color: #FFF;
   border-radius: 25%;
   background: #c3b091;
@@ -223,7 +222,9 @@ li {
 
 .project-wrapper {
   display: flex;
+  padding: 20px 0 0 20px;
   flex-direction: column;
+  width: 90%;
 }
 
 
@@ -237,7 +238,6 @@ body {
   font-family: RobotoLight; /* Имя шрифта */
   font-size: 35px;  
 }
-
 
 .flex-item1 {
   min-width: 100%;
@@ -256,18 +256,19 @@ body {
   margin-top: 10px;
   margin-bottom: 10px;
   font-family: RobotoLight; 
-  font-size: 3rem;
+  font-size: 170%;
+  font-weight: 700;
 }
 
 .title-small {
   margin-top: 10px;
   font-family: RobotoLight;
-  font-size: 2.5rem;
+  font-size: 165%;
 }
 
 .social-item {
   display: flex;
-  margin: 40px 10px 0px 10px;
+  margin: 20px 10px 0px 10px;
   justify-content: center;
   align-content: center;
   font-size: 65px;
@@ -312,12 +313,13 @@ body {
   display: flex;
   margin-top: 10px; 
   margin-left: 20px;
-  flex-direction: column;
-  width: 1000px;
+  padding: 10px;
+  width: 900px;
 }
 
 .project-wrapper {
   display: flex;
+
 }
 
 }
