--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,11 @@ a {
   font-weight: 700;
 }
 
-ul {  
+ul {
+  display: flex;  
   margin-top: 0px;
   padding-left: 20px;
+  list-style-type: none !important; 
 }
 
 li {
@@ -35,6 +37,8 @@ li {
   padding: 0;
   list-style-type: none; 
 }
+
+/*Button style*/
 
 .btn-container {
   display: flex; 
@@ -44,19 +48,8 @@ li {
 .btn-container a :hover {
   color: #000;
   opacity: 0.3;
-}
-
-.title-project {
-  margin-bottom: 10px;
-  font-size: 110%;
-  font-weight: 700;
-
-}
-
-.flex-conteiner {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
+  text-decoration: none;
+  list-style-type: none !important; 
 }
 
 .btn {
@@ -70,19 +63,29 @@ li {
   font-weight: 700;
 }
 
-.btn-container a {
-  text-decoration: none;
-}
-
 .btn-primary {
-  background: #c3b091;
+  background: #c3b091; 
 }
 
 .btn-secondary {
-  background: #dbc7a7;
+  background: #dbc7a7; 
 }
 
-/*новые стили flex*/
+.title-project {
+  margin-bottom: 10px;
+  font-size: 110%;
+  font-weight: 700;
+
+}
+
+/*New flex*/
+
+.flex-container {
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+}
 
 .title-large {
   margin-top: 10px;
@@ -122,7 +125,7 @@ li {
 
 .photo img{
   display: flex;
-  max-width: 220px;
+  max-width: 180px;
 }
 
 .name-wrapper {
@@ -165,9 +168,12 @@ li {
   height: 33px; 
 }
 
-
 .about-wrapper {
   padding-left: 20px;
+}
+
+.about-wrapper ul {
+  margin-bottom: 0px, !important;
 }
 
 .skills-wrapper {
@@ -202,7 +208,7 @@ li {
   margin-top: 10px; 
   margin-left: 20px;
   flex-direction: column;
-  width: 600px;
+  width: 500px;
 }
 
 .education-item {
@@ -212,7 +218,6 @@ li {
 
 .education-item span {
   line-height: 1.5;
-
 }
 
 .speciality {
@@ -239,8 +244,7 @@ li.title-small {
   color: red;
 }
 
-/*конец новых стилей flex*/
-
+/*Media styles*/
 
 @media (max-width: 1000px) {
 
@@ -248,6 +252,13 @@ body {
   margin: 10px 20px;
   font-family: RobotoLight; /* Имя шрифта */
   font-size: 35px;  
+}
+
+.flex-conteiner {
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .flex-item1 {
