--- a/css/style.css
+++ b/css/style.css
@@ -15,27 +15,38 @@
 body {
   margin: 10px 20px;
   font-family: RobotoLight; /* Имя шрифта */
-  font-size: 20px; 
+  font-size: 16px; 
   line-height: 1.5; 
 }
 
 a {
-  color: #735C5C;
+  color: #0073b1;
   text-decoration: none;
   font-weight: 700;
 }
 
-ul {
-  display: flex;  
+ul {  
   margin-top: 0px;
   padding-left: 20px;
-  list-style-type: none !important; 
 }
 
 li {
   margin: 0;
   padding: 0;
   list-style-type: none; 
+}
+
+h1 {
+  margin-block-end: 0em;
+  font-family: RobotoLight; 
+  font-size: 2.0rem;
+}
+
+h2 {
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  font-family: RobotoLight;
+  font-size: 1.5rem;
 }
 
 /*Button style*/
@@ -45,11 +56,12 @@ li {
   justify-content: center;
 }
 
-.btn-container a :hover {
+.btn-container a:hover {
   color: #000;
   opacity: 0.3;
   text-decoration: none;
   list-style-type: none !important; 
+  background: #dbc7a7; 
 }
 
 .btn {
@@ -58,7 +70,7 @@ li {
   padding: 5px;
   text-align: center;
   border: 1px solid #ccc;
-  border-radius: 10px;
+  border-radius: 5px;
   color: #fff;
   font-weight: 700;
 }
@@ -68,7 +80,7 @@ li {
 }
 
 .btn-secondary {
-  background: #dbc7a7; 
+  background: #ccc;
 }
 
 .title-project {
@@ -80,29 +92,24 @@ li {
 
 /*New flex*/
 
-.flex-container {
-  margin: 0 auto;
+/*test block*/
+
+.wrapper-test {
   display: flex;
   flex-wrap: wrap;
-  width: 80%;
+  justify-content: space-around;
 }
 
-.title-large {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  font-family: RobotoLight; 
-  font-size: 2.4rem;
-}
-
-.title-small {
-  margin-top: 10px;
-  font-family: RobotoLight;
-  font-size: 2.0rem;
+.item-test {
+  display: flex;
+  margin: 5px;
+  padding: 10px;
+  flex: 1 0 auto;
 }
 
 .flex-border {
-  border: 1px solid #ccc;
-  border-radius: 30px;
+  border: 1px solid #c3b091;
+  border-radius: 10px;
   overflow: hidden;
 }
 
@@ -124,18 +131,11 @@ li {
 }
 
 .photo img{
-  display: flex;
-  max-width: 180px;
+  margin: -10px;
+  max-width: 160px; 
 }
 
-.name-wrapper {
-  margin-left: 20px;
-
-}
-
-.name-item {
-  display: flex;
-  flex-wrap: wrap;
+.wrapper-name {
 }
 
 .social-links-wrapper {
@@ -169,7 +169,6 @@ li {
 }
 
 .about-wrapper {
-  padding-left: 20px;
 }
 
 .about-wrapper ul {
@@ -177,18 +176,13 @@ li {
 }
 
 .skills-wrapper {
-  margin-left: 20px;
 }
 
 .languages-wrapper li {
-  padding-bottom: 10px;
-  font-size: 25px;
 }
 
 .skills-item-wrapper {
   display: flex;
-  margin-top: 10px;
-  margin-bottom: 30px;
   max-width: 530px;
   flex-wrap: wrap;
 }
@@ -196,24 +190,22 @@ li {
 .skills-item {  
   margin: 5px;
   padding: 6px;
-  border-radius: 8px;
+  border-radius: 6px;
+  border: 2px solid #c3b091;
   font-size: 25px;
   font-family: RobotoBold;
-  color: #fff;  
-  background: #c3b091;
+  color: #c3b094;  
+  background: #fff;
 }
 
 .education-wrapper {
   display: flex;
-  margin-top: 10px; 
-  margin-left: 20px;
   flex-direction: column;
   width: 500px;
 }
 
 .education-item {
   display: flex;
-  margin-top: 10px;
 }
 
 .education-item span {
@@ -225,23 +217,23 @@ li {
   font-size: 20px;
 }
 
+/*badprojects block*/
+
 .project-wrapper {
-  margin: 10px;
-  padding: 20px;
   width: 40%;
-  flex-shrink: 1;
+  flex-direction: column;
 }
 
+/*work expirience block*/
+
 .work-exp-wrapper {
-margin: 10px; 
-padding: 20px; 
-width: 45%;
-flex-grow: 1;
+  flex-direction: column;
+  width: 45%;
 }
 
 li.title-small {
-  font-size: 1.8rem;
-  color: red;
+  font-size: 1.5rem;
+  color: #999;
 }
 
 /*Media styles*/
