--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&subset=cyrillic');
+
 *, *:before, *:after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Roboto;
+  font-weight: 400;
 }
-
-@font-face {
-    font-family: RobotoLight; /* Имя шрифта */
-    src: url(fonts/Roboto/Roboto-Light.ttf); /* Путь к файлу со шрифтом */
-   }
-
-@font-face {
-    font-family: RobotoBold; /* Имя шрифта */
-    src: url(fonts/Roboto/Roboto-Bold.ttf); /* Путь к файлу со шрифтом */
-   }
 
 body {
   margin: 10px 20px;
-  font-family: RobotoLight; /* Имя шрифта */
   font-size: 16px; 
   line-height: 1.5; 
 }
@@ -38,15 +33,30 @@ li {
 
 h1 {
   margin-block-end: 0em;
-  font-family: RobotoLight; 
-  font-size: 2.0rem;
 }
 
 h2 {
   margin-block-start: 0em;
   margin-block-end: 0em;
-  font-family: RobotoLight;
-  font-size: 1.5rem;
+}
+
+.title-large-first {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 2.4em;
+  font-weight: 700;
+}
+
+.title-large {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  font-size: 2.4em;
+  font-weight: 700;
+}
+
+.title-small {
+  margin-top: 10px;
+  font-size: 1.8em;
 }
 
 /*Button style*/
@@ -108,22 +118,16 @@ h2 {
   flex: 1 0 auto;
 }
 
+.item-test-first {
+  display: flex;
+  margin: 5px;
+  flex: 1 0 auto;
+}
+
 .flex-border {
   border: 1px solid #c3b091;
   border-radius: 10px;
   overflow: hidden;
-}
-
-.flex-item1 {
-  display: flex;
-  margin: 10px;
-  flex: 1 0 auto;
-}
-
-.flex-item2 {
-  display: flex;
-  margin: 10px;
-  flex: 1 0 auto;
 }
 
 .fio-wrapper {
@@ -131,9 +135,9 @@ h2 {
 
 }
 
-.photo img{
-  margin: -10px;
-  max-width: 160px; 
+.photo {
+  max-width: 200px;
+  height: 280px; 
 }
 
 .wrapper-name {
@@ -156,7 +160,6 @@ h2 {
   height: 48px;
   justify-content: center;
   font-size: 40px;
-  font-family: RobotoLight;
   line-height: 1.30;
   color: #FFF;
   border-radius: 25%;
@@ -194,7 +197,6 @@ h2 {
   border-radius: 6px;
   border: 2px solid #c3b091;
   font-size: 25px;
-  font-family: RobotoBold;
   color: #c3b094;  
   background: #fff;
 }
@@ -243,7 +245,6 @@ li.title-small {
 
 body {
   margin: 10px 20px;
-  font-family: RobotoLight; /* Имя шрифта */
   font-size: 35px;  
 }
 
@@ -254,40 +255,51 @@ body {
   width: 100%;
 }
 
-.flex-item1 {
-  min-width: 100%;
-}
-
-.flex-item2 {
-  min-width: 100%;
-}
-
-.photo img{
+.item-test {
   display: flex;
-  max-width: 250px;
+  margin: 5px;
+  padding: 10px;
+  flex: 1 0 auto;
+}
+
+.item-test-first {
+  display: flex;
+  margin: 5px;
+  height: 280px;
+  flex: 1 0 auto;
+}
+
+.photo {
+  max-width: 210px;
+  height: 290px;
+}
+
+.title-large-first {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 1.6em;
+  font-weight: 700;
 }
 
 .title-large {
   margin-top: 10px;
   margin-bottom: 10px;
-  font-family: RobotoLight; 
-  font-size: 170%;
+  font-size: 1.6em;
   font-weight: 700;
 }
 
 .title-small {
   margin-top: 10px;
-  font-family: RobotoLight;
-  font-size: 165%;
+  font-size: 1.4em;
+  font-weight: 700;
 }
 
 .social-item {
   display: flex;
-  margin: 20px 10px 0px 10px;
+  margin: 0px 10px 0px 10px;
   justify-content: center;
   align-content: center;
   font-size: 65px;
-  font-family: RobotoLight;
   width: 80px;
   height: 80px;
   color: #FFF;
@@ -311,12 +323,13 @@ body {
 
 .skills-item {  
   margin: 5px;
-  padding: 6px;
+  padding: 5px 15px;
   border-radius: 8px;
-  font-size: 50px;
-  font-family: RobotoBold;
-  color: #fff;  
-  background: #c3b091;
+  border: 2px solid #c3b091;
+  font-size: 2em;
+  font-weight: 700;
+  color: #c3b094;  
+  background: #fff;
 }
 
 .languages-wrapper li{
@@ -342,6 +355,4 @@ margin: 10px;
 padding: 20px; 
 width: 100%;
 text-align: justify; 
-}
-
 }
