--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,14 @@
 
 body {
   margin: 10px 20px;
-  font-size: 16px; 
+  font-size: 18px; 
   line-height: 1.5; 
+  color: #1E253A;
 }
 
 a {
-  color: #0073b1;
   text-decoration: none;
-  font-weight: 700;
+  color: #7495F7;
 }
 
 ul {  
@@ -31,32 +31,18 @@ li {
   list-style-type: none; 
 }
 
+strong {
+  font-weight: 700;
+}
+
 h1 {
-  margin-block-end: 0em;
+  font-size: 45px;
+  font-weight: 700;
 }
 
 h2 {
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-}
-
-.title-large-first {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  font-size: 2.4em;
+  font-size: 30px;
   font-weight: 700;
-}
-
-.title-large {
-  margin-top: 0px;
-  margin-bottom: 10px;
-  font-size: 2.4em;
-  font-weight: 700;
-}
-
-.title-small {
-  margin-top: 10px;
-  font-size: 1.8em;
 }
 
 /*Button style*/
@@ -143,10 +129,12 @@ h2 {
 .wrapper-name {
 }
 
+/* Social links */
+
 .social-links-wrapper {
   display: flex;
-  margin-top: 20px;
-  justify-content: center;
+  margin: 20px 0;
+  padding-left: 20px; 
 }
 
 .social-links-wrapper a:hover {
@@ -155,7 +143,7 @@ h2 {
 
 .social-item {
   display: flex;
-  margin: 5px;
+  margin-right: 10px;
   width: 48px;
   height: 48px;
   justify-content: center;
@@ -165,6 +153,7 @@ h2 {
   border-radius: 25%;
   background: #c3b091;
 }
+
 
 .social-item img {
   margin-top: 8px;
@@ -234,9 +223,13 @@ h2 {
   width: 45%;
 }
 
+#exjob-title {
+  
+}
+
 li.title-small {
-  font-size: 1.5rem;
-  color: #999;
+  font-size: 35px;
+  color: #c3b094;
 }
 
 /*Media styles*/
@@ -245,7 +238,17 @@ li.title-small {
 
 body {
   margin: 10px 20px;
-  font-size: 35px;  
+  font-size: 35px;
+}
+
+h1 {
+  font-size: 65px;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 50px;
+  font-weight: 700;
 }
 
 .flex-conteiner {
@@ -258,14 +261,14 @@ body {
 .item-test {
   display: flex;
   margin: 5px;
-  padding: 10px;
+  padding: 20px;
   flex: 1 0 auto;
 }
 
 .item-test-first {
   display: flex;
   margin: 5px;
-  height: 280px;
+  height: 290px;
   flex: 1 0 auto;
 }
 
@@ -277,27 +280,28 @@ body {
 .title-large-first {
   margin-top: 10px;
   margin-bottom: 10px;
-  font-size: 1.6em;
+  font-size: 35px !important;
   font-weight: 700;
 }
 
 .title-large {
   margin-top: 10px;
   margin-bottom: 10px;
-  font-size: 1.6em;
+  font-size: 35px !important;
   font-weight: 700;
 }
 
 .title-small {
   margin-top: 10px;
-  font-size: 1.4em;
+  font-size: 30px !important;
   font-weight: 700;
 }
 
+/* Social links */
+
 .social-item {
   display: flex;
-  margin: 0px 10px 0px 10px;
-  justify-content: center;
+  margin: 0px 15px 0px 0px;
   align-content: center;
   font-size: 65px;
   width: 80px;
@@ -313,6 +317,8 @@ body {
   height: 65px; 
 }
 
+/* Skills */
+
 .skills-item-wrapper {
   display: flex;
   margin-top: 10px;
@@ -323,10 +329,10 @@ body {
 
 .skills-item {  
   margin: 5px;
-  padding: 5px 15px;
+  padding: 5px 10px;
   border-radius: 8px;
   border: 2px solid #c3b091;
-  font-size: 2em;
+  font-size: 45px;
   font-weight: 700;
   color: #c3b094;  
   background: #fff;
@@ -351,8 +357,8 @@ body {
 }
 
 .work-exp-wrapper {
-margin: 10px; 
-padding: 20px; 
-width: 100%;
-text-align: justify; 
+  margin: 10px; 
+  padding: 20px; 
+  width: 100%;
+  text-align: justify; 
 }
