--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 }
 
 body {
-  margin: 10px 20px;
   font-size: 18px; 
   line-height: 1.5; 
   color: #1E253A;
@@ -47,39 +46,35 @@ h2 {
 
 /*Button style*/
 
-.btn-container {
-  margin-top: -20px;
-  display: flex; 
+.btn-wrapper {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
   justify-content: center;
 }
 
-.btn-container a:hover {
-  color: #000;
-  opacity: 0.3;
-  text-decoration: none;
-  list-style-type: none !important; 
-  background: #dbc7a7;
-}
-
 .btn {
-  display: flex;
-  margin: 5px;
+  margin-right: 10px;
+  margin-top: -5px;
   padding: 5px;
   text-align: center;
-  border: 1px solid #ccc;
+  border: 1px solid #1E253A;
   border-radius: 5px;
-  color: #fff;
+  color: #1E253A;
   font-weight: 700;
 }
 
 .btn-primary {
   position: relative;
-  background: #c3b091; 
+  background: #1E253A;
+  color: #fff; 
 }
 
 .btn-secondary {
   position: relative;
-  background: #ccc;
+  background: #fff;
 }
 
 .title-project {
@@ -93,26 +88,31 @@ h2 {
 
 .container {
   margin: 0 auto;
-  width: 70%;
+  width: 65%;
 }
 
 /* block */
 
 .item-container {
   display: flex;
+  margin-top: 10px;
   max-width: 100%;
 }
 
-.first-block {
+.sp-between {
   justify-content: space-between; 
+  padding-bottom: 20px;
 }
 
-.base-info {
-  display: flex;
+.first-col {
+}
+
+.second-col {
+  min-width: 250px;
 }
 
 .photo {
-  height: 120px;
+  height: 150px;
   border-radius: 50%; 
 }
 
@@ -141,7 +141,6 @@ h2 {
   background: #c3b091;
 }
 
-
 .social-item img {
   margin-top: 8px;
   width: 33px;
@@ -156,25 +155,17 @@ h2 {
 }
 
 .skills-wrapper {
-}
-
-.languages-wrapper li {
-}
-
-.skills-item-wrapper {
   display: flex;
-  max-width: 530px;
   flex-wrap: wrap;
 }
 
 .skills-item {  
-  margin: 5px;
-  padding: 6px;
-  border-radius: 6px;
-  border: 2px solid #c3b091;
-  font-size: 25px;
-  color: #c3b094;  
-  background: #fff;
+  padding: 0px 40px 30px 0px;  
+  width: 300px;
+}
+
+.skills-item p {  
+  font-size: 14px;
 }
 
 .education-wrapper {
@@ -243,25 +234,9 @@ h2 {
   font-weight: 700;
 }
 
-.flex-conteiner {
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-}
-
 .item-container {
   display: flex;
-  margin: 5px;
-  padding: 20px;
-  flex: 1 0 auto;
-}
-
-.item-container-first {
-  display: flex;
-  margin: 5px;
-  height: 290px;
-  flex: 1 0 auto;
+  margin-top: 10px;
 }
 
 .photo {
