--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,17 @@ strong {
   font-weight: 700;
 }
 
-h1 {
-  font-size: 32px;
+h1{
+  font-size: 40px;
   font-weight: 500;
 }
 
 h2 {
+  font-size: 30px;
+  font-weight: 500;
+}
+
+h3 {
   margin-bottom: 5px;
   font-size: 20px;
   font-weight: 500;
@@ -197,12 +202,12 @@ body {
   font-size: 35px;
 }
 
-h1 {
+h2 {
   font-size: 65px;
   font-weight: 700;
 }
 
-h2 {
+h3 {
   font-size: 50px;
   font-weight: 700;
 }
