--- a/css/style.css
+++ b/css/style.css
@@ -52,35 +52,28 @@ h3 {
 }
 
 /*Button style*/
-.btn-wrapper {
+.lang-btn-wrapper {
   display: flex;
   justify-content: center;
 }
 
-.btn {
+.lang-btn {
   margin: -10px 3px 3px 3px;
   padding: 10px 0px 5px 0px;
   border: 1px solid #484848;
   border-radius: 10px;
-  width: 100px;
+  min-width: 100px;
   background-color: #f6f5ed; 
   text-align: center;
   transition: background-color 0.2s;
 }
 
-.btn:hover {
+.lang-btn:hover {
   background-color: #484848; 
 }
 
-.btn a {
+.lang-btn a {
   color: #C30C0C;
-}
-
-.title-project {
-  margin-bottom: 10px;
-  font-size: 110%;
-  font-weight: 700;
-
 }
 
 /* main container */
@@ -135,9 +128,6 @@ h3 {
   justify-content: center;
   font-size: 40px;
   line-height: 1.30;
-  color: #FFF;
-  border-radius: 25%;
-  background: #c3b091;
 }
 
 .social-item img {
@@ -145,7 +135,6 @@ h3 {
   width: 33px;
   height: 33px; 
 }
-
 
 .skills-wrapper {
   display: flex;
@@ -184,15 +173,6 @@ h3 {
   width: 45%;
 }
 
-#exjob-title {
-  
-}
-
-li.title-small {
-  font-size: 35px;
-  color: #c3b094;
-}
-
 /*Media styles*/
 
 @media (max-width: 1000px) {
@@ -222,26 +202,6 @@ h3 {
   height: 290px;
 }
 
-.title-large-first {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  font-size: 35px !important;
-  font-weight: 700;
-}
-
-.title-large {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  font-size: 35px !important;
-  font-weight: 700;
-}
-
-.title-small {
-  margin-top: 10px;
-  font-size: 30px !important;
-  font-weight: 700;
-}
-
 /* Social links */
 
 .social-item {
@@ -265,45 +225,7 @@ h3 {
 /* Skills */
 
 .skills-item-wrapper {
-  display: flex;
-  margin-top: 10px;
-  margin-bottom: 30px;
-  max-width: 800px;
-  flex-wrap: wrap;
 }
 
 .skills-item {  
-  margin: 5px;
-  padding: 5px 10px;
-  border-radius: 8px;
-  border: 2px solid #c3b091;
-  font-size: 45px;
-  font-weight: 700;
-  color: #c3b094;  
-  background: #fff;
-}
-
-.languages-wrapper li{
-  font-size: 35px;
-}
-
-.education-wrapper {
-  display: flex;
-  margin-top: 10px; 
-  margin-left: 20px;
-  padding: 10px;
-  width: 900px;
-}
-
-.project-wrapper {
-  margin: 10px;
-  padding: 20px;
-  width: 100%;
-}
-
-.work-exp-wrapper {
-  margin: 10px; 
-  padding: 20px; 
-  width: 100%;
-  text-align: justify; 
 }
