--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   font-family: Roboto;
-  font-weight: 400;
+  /*font-weight: 400;*/
 }
 
 body {
@@ -30,24 +30,20 @@ li {
   list-style-type: none; 
 }
 
-strong {
-  font-weight: 700;
-}
-
 h1{
   font-size: 40px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 h2 {
   font-size: 30px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 h3 {
   margin-bottom: 5px;
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 400;
   /*border-bottom: 1px solid #484848;*/
 }
 
@@ -80,7 +76,7 @@ h3 {
 
 .container {
   margin: auto;
-  width: 65%;
+  max-width: 65%;
 }
 
 /* block */
@@ -89,6 +85,7 @@ h3 {
   display: flex;
   margin-top: 10px;
   max-width: 100%;
+  flex-wrap: wrap;
 }
 
 .sp-between {
@@ -146,6 +143,10 @@ h3 {
   width: 300px;
 }
 
+.skills-item h3 {
+  border-bottom: 1px solid #ccc;
+}
+
 .skills-item p {  
   font-size: 14px;
 }
@@ -173,38 +174,69 @@ h3 {
   width: 45%;
 }
 
+footer {
+  min-height: 100px;
+  /*background-color: #484848; */
+}
+
+.footer-link {
+  color: #f6f5ed
+}
+
 /*Media styles*/
 
 @media (max-width: 1000px) {
 
-body {
-  margin: 10px 20px;
-  font-size: 35px;
+h1{
+  font-size: 40px;
+  font-weight: 400;
 }
 
 h2 {
-  font-size: 65px;
-  font-weight: 700;
+  font-size: 30px;
+  font-weight: 400;
 }
 
 h3 {
-  font-size: 50px;
-  font-weight: 700;
+  margin-bottom: 5px;
+  font-size: 20px;
+  font-weight: 400;
+  /*border-bottom: 1px solid #484848;*/
 }
 
 .item-container {
   display: flex;
   margin-top: 10px;
+  flex-direction: column;
 }
 
-.photo {
-  max-width: 210px;
-  height: 290px;
+/*.first-col-xs h1, li {
+  text-align: center;
+}*/
+
+/*.first-col-xs {
+  display: flex;
+  flex-direction: column; 
+  justify-content: center;
 }
+*/
+.second-col {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
+.photo {
+  margin: auto;
+  width: 150px;
+}
+
 
 /* Social links */
 
-.social-item {
+/*.social-item {
   display: flex;
   margin: 0px 15px 0px 0px;
   align-content: center;
@@ -220,7 +252,7 @@ h3 {
   margin-top: 8px;
   width: 65px;
   height: 65px; 
-}
+}*/
 
 /* Skills */
 
