--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  font-size: 18px; 
+  font-size: 1.1em; 
   line-height: 1.5; 
   color: #484848;
   background-color:  #f6f5ed;
@@ -92,18 +92,21 @@ span.overline {
 
 .item-container {
   display: flex;
-  margin-top: 10px;
+  margin-top: 20px;
   max-width: 100%;
+}
+
+.item-margin {
+  margin-top: 40px;
 }
 
 .sp-between {
   justify-content: space-between; 
-  padding-bottom: 20px;
 }
 
 .first-col {
+  margin-bottom: 10px;
   padding-right: 40px;
-  padding-bottom: 20px;
 }
 
 .second-col {
@@ -115,33 +118,7 @@ span.overline {
   border-radius: 50%; 
 }
 
-/* Social links */
-
-.social-links-wrapper {
-  display: flex;
-  margin: 20px 0;
-  padding-left: 20px; 
-}
-
-.social-links-wrapper a:hover {
-  opacity: 0.5;
-}
-
-.social-item {
-  display: flex;
-  margin-right: 10px;
-  width: 48px;
-  height: 48px;
-  justify-content: center;
-  font-size: 40px;
-  line-height: 1.30;
-}
-
-.social-item img {
-  margin-top: 8px;
-  width: 33px;
-  height: 33px; 
-}
+/* TODO Social links */
 
 .skills-wrapper {
   display: flex;
@@ -157,12 +134,17 @@ span.overline {
   border-bottom: 1px solid #ccc;
 }
 
-.skills-item p {  
-  font-size: 14px;
+.skills-item p { 
+  color: #989890; 
+  font-size: 0.8em;
+}
+
+.edu-describe {
+  margin-top: 20px;
 }
 
 .edu-describe p {
-  font-size: 14px;
+  font-size: 0.8em;
 }
 
 /*badprojects block*/
@@ -177,11 +159,8 @@ span.overline {
   font-weight: 700;
 }
 
-/*work expirience block*/
-
-.work-exp-wrapper {
-  flex-direction: column;
-  width: 45%;
+.other p {
+  margin-bottom: 35px;
 }
 
 footer {
@@ -195,17 +174,39 @@ footer {
 
 /*Media styles*/
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 480px) and (max-width: 1000px) {
+
+body {
+  font-size: 3em; 
+}
+
+h1{
+  font-size: 2.6em;
+  font-weight: 400;
+}
+
+h2 {
+  font-size: 1.6em;
+  font-weight: 400;
+}
+
+h3 {
+  margin-bottom: 5px;
+  font-size: 1em;
+  font-weight: 400;
+  /*border-bottom: 1px solid #484848;*/
+}
 
 .lang-btn {
   margin: -10px 3px 3px 3px;
-  padding: 10px 5px 5px 5px;
+  padding: 10px 5px 20px 5px;
   border: 1px solid #484848;
   border-radius: 10px;
-  width: 300px;
+  width: 400px;
+  font-size: 1.4em;
   background-color: #f6f5ed; 
   text-align: center;
-  transition: background-color 0.2s;
+  transition: background-color 0.1s;
 }
 
 .container {
@@ -213,77 +214,48 @@ footer {
   max-width: 75%;
 }
 
-h1{
-  font-size: 40px;
-  font-weight: 400;
-}
-
-h2 {
-  font-size: 30px;
-  font-weight: 400;
-}
-
-h3 {
-  margin-bottom: 5px;
-  font-size: 20px;
-  font-weight: 400;
-  /*border-bottom: 1px solid #484848;*/
-}
-
 .item-container {
   display: flex;
-  margin-top: 10px;
+  margin-top: 20px;
   flex-direction: column;
 }
 
-/*.first-col-xs h1, li {
-  text-align: center;
-}*/
-
-/*.first-col-xs {
-  display: flex;
-  flex-direction: column; 
-  justify-content: center;
+.item-margin {
+  margin-top: 100px;
 }
-*/
+
+
+.first-col-xs h1, .first-col-xs li {
+  text-align: center;
+}
+
 .second-col {
   margin-top: 10px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
 
 .photo {
   margin: auto;
-  width: 150px;
+  height: 350px;
 }
 
 
-/* Social links */
-
-/*.social-item {
-  display: flex;
-  margin: 0px 15px 0px 0px;
-  align-content: center;
-  font-size: 65px;
-  width: 80px;
-  height: 80px;
-  color: #FFF;
-  border-radius: 25%;
-  background: #c3b091;
-}
-
-.social-item img {
-  margin-top: 8px;
-  width: 65px;
-  height: 65px; 
-}*/
+/* TODO Social links */
 
 /* Skills */
 
-.skills-item-wrapper {
+.skills-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
-.skills-item {  
+.skills-item {
+  width: 100%;  
+}
+.skills-item p {  
+  font-size: 0.8em;
 }
