--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ span.overline {
 }
 
 
-/*Button style*/
+/* Language buttons style */
+
 .lang-btn-wrapper {
   display: flex;
   justify-content: center;
@@ -66,7 +67,7 @@ span.overline {
 .lang-btn {
   margin: -10px 3px 3px 3px;
   padding: 10px 0px 5px 0px;
-  border: 1px solid #484848;
+  border: 1px solid transparent;
   border-radius: 10px;
   min-width: 100px;
   background-color: #f6f5ed; 
@@ -124,6 +125,10 @@ span.overline {
 .photo {
   height: 150px;
   border-radius: 50%; 
+}
+
+.position {
+  color: #C30C0C;
 }
 
 /* TODO Social links */
